# best_bid_ask

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_project.sh  run_benchmark.sh  run_benchmartk.sh  run_cppcheck.sh
application/: CMakeLists.txt
application/src/: main.cpp
benchmark/: CMakeLists.txt  main.cpp
best_bid_ask/: CMakeLists.txt
best_bid_ask/src/: main.cpp
cmake/: google_benchmark.cmake  json.cmake
console_app/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: best_parameters.h  bids_asks.h  file_output_strategy.h  helpers.h  nlohmann_json_payload_processor.h  order.h  order_book.h  order_book_iface.h  orders_helpers.h  output_strategy_iface.h  payload_processor_iface.h  payload_tags.h  rapidjson_payload_processor.h
lib/src/: bids_asks.cpp  file_output_strategy.cpp  nlohmann_json_payload_processor.cpp  rapidjson_payload_processor.cpp
test/: CMakeLists.txt
test/include/: output_strategy_mock.h  payload_processor_mock.h
test/src/: best_bid_ask_test.cpp
